# circt-stream

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: formatting.yml
docs/: RationaleStream.md
include/: CMakeLists.txt
include/Standalone/: CMakeLists.txt  Passes.h  StandaloneOps.td
include/Standalone/Conversion/: CMakeLists.txt  Passes.h  Passes.td  StreamToHandshake.h
include/Standalone/Dialect/: CMakeLists.txt
include/Standalone/Dialect/Standalone/: StandaloneDialect.h  StandaloneOps.h  StandaloneOps.td
include/Standalone/Dialect/Stream/: StreamDialect.h  StreamDialect.td  StreamOps.h  StreamOps.td  StreamTypes.h  StreamTypes.td
include/Standalone/StandaloneToScf/: StandaloneToScf.h
include/circt-stream/: CMakeLists.txt
include/circt-stream/Conversion/: CMakeLists.txt  Passes.h  Passes.td  StreamToHandshake.h
include/circt-stream/Dialect/Stream/: CMakeLists.txt  StreamDialect.h  StreamDialect.td  StreamOps.h  StreamOps.td  StreamTypes.h  StreamTypes.td
include/circt-stream/Transform/: CMakeLists.txt  CustomBufferInsertion.h  Passes.h  Passes.td
integration_test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
integration_test/Dialect/Stream/: bug-reproduce.mlir  cocotb_bench.py  cocotb_driver.py  combine-with-reg.mlir  combine.mlir  complex.mlir  create.mlir  driver.cpp  driverI64I1.sv  driver_out_i64.sv  driver_out_i64_i64.sv  filter-with-reg.mlir  filter.mlir  helper.py  lit.local.cfg.py  map-with-reg.mlir  map.mlir  reduce-with-reg.mlir  reduce.mlir  split-with-reg.mlir  split.mlir  task-pipelining.mlir
integration_test/Dialect/Stream/combine/: combine.mlir  combine.py
integration_test/Dialect/Stream/combine-with-reg/: combine-with-reg.mlir  combine-with-reg.py
integration_test/Dialect/Stream/complex/: complex.mlir  complex.py
integration_test/Dialect/Stream/filter/: filter.mlir  filter.py
integration_test/Dialect/Stream/filter-with-reg/: filter-with-reg.mlir  filter-with-reg.py
integration_test/Dialect/Stream/map/: map.mlir  map.py
integration_test/Dialect/Stream/map-with-reg/: map-with-reg.mlir  map-with-reg.py
integration_test/Dialect/Stream/projection/: projection.mlir  projection.py
integration_test/Dialect/Stream/projection-selection/: projection-selection.mlir  projection-selection.py
integration_test/Dialect/Stream/projection-with-reg/: projection-with-reg.mlir  projection-with-reg.py
integration_test/Dialect/Stream/reduce/: reduce.mlir  reduce.py
integration_test/Dialect/Stream/reduce-with-reg/: reduce-with-reg.mlir  reduce-with-reg.py
integration_test/Dialect/Stream/split/: split.mlir  split.py
integration_test/Dialect/Stream/split-with-reg/: split-with-reg.mlir  split-with-reg.py
integration_test/Dialect/Stream/stream-stats/: stream-stats.mlir  stream-stats.py
integration_test/Dialect/Stream/task-pipelining/: task-pipelining.mlir  task-pipelining.py
lib/: CMakeLists.txt  PassDetail.h
lib/CAPI/: Dialects.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Conversion/StandaloneToScf/: CMakeLists.txt  StandaloneToScf.cpp
lib/Conversion/StreamToHandshake/: CMakeLists.txt  StreamToHandshake.cpp
lib/Dialect/Standalone/: CMakeLists.txt  StandaloneDialect.cpp  StandaloneOps.cpp
lib/Dialect/Stream/: CMakeLists.txt  StreamDialect.cpp  StreamOps.cpp
lib/StandaloneToScf/: CMakeLists.txt  StandaloneToScf.cpp
lib/Transform/: CMakeLists.txt  CustomBufferInsertion.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/StandaloneToScf/: ops.mlir
test/Conversion/StreamToHandshake/: combine.mlir  combined.mlir  create.mlir  filter.mlir  map.mlir  multiple-ops.mlir  noop.mlir  ops.mlir  pack_unpack.mlir  reduce.mlir  registers.mlir  sink.mlir  split.mlir
test/Dialect/Standalone/: ops.mlir
test/Dialect/Stream/: canonicalize.mlir  errors.mlir  memory-ops.mlir  ops.mlir  reg-errors.mlir  reg-ops.mlir
test/EndToEnd/: neg_to_zero.mlir
test/Standalone/: ops.mlir
test/StandaloneToScf/: ops.mlir
test/Transform/: custom-buffer-insertion.mlir
test/standalone-opt/: commandline.mlir
tools/: CMakeLists.txt  standalone-opt.cpp  stream-opt.cpp
